function(solution)
    cmake_parse_arguments(SOLUTION "" "NAME" "" ${ARGN})

    string(CONCAT SUIT_TEST ${SOLUTION_NAME} "_suit")
    string(CONCAT SOLUTION_TEST_SRC ${SOLUTION_NAME} ".cpp")

    add_executable(${SOLUTION_NAME} "${SOLUTION_TEST_SRC}")
    add_test(NAME ${SUIT_TEST} COMMAND ${SOLUTION_NAME})
endfunction()

# leetcode
solution(NAME "minimum_difficulty_job_schedule")
solution(NAME "climbing_stairs")
solution(NAME "add_two_numbers")
solution(NAME "gray_code")
solution(NAME "palindrome_list")
solution(NAME "two_sum")
solution(NAME "maximum_count_pos_neg")
solution(NAME "count_neg_in_matrix")
solution(NAME "find_number_even_digits")
solution(NAME "running_sum")
solution(NAME "find_pivot_index")
solution(NAME "gcd_array")
solution(NAME "trap_rain_water")
solution(NAME "isomorphic_string")
solution(NAME "subsequence")
solution(NAME "merge_sorted_lists")
solution(NAME "sliding_window_max")
solution(NAME "sliding_window_median")
solution(NAME "subsequence_k_max_sum")
solution(NAME "k_largest_elements")
solution(NAME "max_average_subarray")
solution(NAME "max_sum_circle_subarray")
solution(NAME "longest_palindrome")
solution(NAME "binary_search")
solution(NAME "min_cost_climbing_stairs")
solution(NAME "unique_path")
solution(NAME "largest_rectangle")
solution(NAME "backspace_string_cmp")
solution(NAME "length_longest_substring")

# codewars
solution(NAME "supermarket_queue")

# other
solution(NAME "subarray_k_max_sum")
